--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
     "nyc": "^10.1.2",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.3"
+  },
+  "nyc": {
+    "exclude": [
+      "lib/**/*-test.js"
+    ]
   }
 }
