--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "algorithms-with-javascript",
   "version": "1.0.0",
+  "private": true,
   "description": "Common programming algorithms written with JavaScript",
   "main": "index.js",
   "scripts": {
